# django-shopping-cart

./: setup.cfg
cart/: cart.py
cart/templatetags/: cart_tag.py  cart_tag_2.py  cart_tags.py
django_shopping_cart.egg-info/: PKG-INFO  SOURCES.txt
