[metadata]
name = django-shopping-cart
version = 0.2.8
description = A Django shopping cart.
long_description = file: README.rst
url = https://github.com/KieranCNZTech/django-shopping-cart.git
author = Kieran Findlay
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django2 & Django3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
